fix(text) text align left for faq block (mob)

--- a/src/components/main-page/main-page.component.scss
+++ b/src/components/main-page/main-page.component.scss
@@ -154,6 +154,7 @@ $border: 1px solid $primary;
       align-items: center;
       font-weight: 500;
       cursor: pointer;
+      text-align: left;
 
       &:hover,
       &.active {
